--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -28,6 +28,12 @@ jobs:
               run: |
                   git config user.name "github-actions[bot]"
                   git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-                  git add README.md 
-                  git commit -m "Update daily info"
-                  git push
+                  git add README.md
+
+                  # Проверяем — есть ли реальные изменения
+                  if git diff --cached --quiet; then
+                    echo "No changes to commit"
+                  else
+                    git commit -m "Update daily info"
+                    git push
+                  fi
